# GIMPCapsule

./: .gitignore  CHANGELOG.md  GIMPCapsule_Smart_Capsules_EN.md  Makefile  README.md  gimp-dynamic-inkscape-v5  gimp-smart-capsule-v5  main.c  meson.build  metadata.c  metadata.h
